--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     text-decoration: underline;
   }
   .container {
-    font-size: 1.5em;
+    font-size: 2em;
     min-height: 300px;
     width: 100%;
     background: LightGray;
@@ -74,7 +74,7 @@
 </style>
 
 <div class="container">
-  <div class="item1">header</div>
+  <div class="item1">КАДЕНДАРЬ Декабрь 2021</div>
   <div class="item2">advert</div>
   <div class="item3">
     <div class="item0"><a href='' target="blank">1</a></div>
