--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </style>
 
 <div class="container">
-  <div class="item1">КАДЕНДАРЬ Декабрь 2021</div>
+  <div class="item1">КАЛЕНДАРЬ Декабрь 2021</div>
   <div class="item2">advert</div>
   <div class="item3">
     <div class="item0"><a href='' target="blank">1</a></div>
