--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </style>
 
 <div class="container">
-  <div class="item1">Календарь 2021</div>
+  <div class="item1">Календарь декабрь 2021</div>
   <div class="item2">advert</div>
   <div class="item3">
     <div class="item0"><a href='' target="blank">1</a></div>
